--- a/InventoryManagement_Danish/appsettings.json
+++ b/InventoryManagement_Danish/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DANISH-BHALA\\SQLEXPRESS;Database=InventoryManagement_Danish;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DANISH-BHALA\\SQLEXPRESS;Database=InventoryManagement_Danish;Trusted_Connection=True;MultipleActiveResultSets=true"9
   },
   "Logging": {
     "LogLevel": {
